# Gui_Agent

./: README.md
BrowserGymMapping/: to_bg_actions.py
TestingActions/: README.md  main.py  pyproject.toml  sample_actions.txt  sample_bgym_actions.txt  test_bgym.py  test_workarena.py
TestingActions/utils/bgym_utils/: BID.js  functions.py  utils.py
event-capture/: README.md
event-capture/server/: .env.example
