[project]
name = "testingactions"
version = "0.1.0"
description = "BrowserGym Actions Runner - Standalone implementation with Playwright"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentlab>=0.4.0",
    "browsergym-core>=0.3.5",
    "pytest-playwright>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "*.txt",
    "*.md"
]
